# lottery

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  package.json  pnpm-lock.yaml
.claude/: settings.local.json
docs/: README.md
docs/deployment/: DEPLOYMENT.md
docs/development/: DEVELOPMENT.md
docs/guides/: QUICK_START.md
docs/lottery-prediction/: ARCHITECTURE.md  DATABASE.md  PROCESS.md  REQUIREMENTS.md
examples/: data_collection_example.rs
migrations/: 001_create_lottery_tables.sql  002_insert_seed_data.sql
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/lottery/: api.rs  data_collector.rs  errors.rs  mod.rs  models.rs
src-tauri/src/lottery/algorithms/: algorithm_factory.rs  arima.rs  feature_engineering.rs  hybrid.rs  lstm.rs  mod.rs  model_trainer.rs  neural_network.rs  random_forest.rs  statistical.rs  traits.rs
src-tauri/src/lottery/commands/: data_collection.rs  mod.rs
src-tauri/src/lottery/services/: data_collection.rs  mod.rs
src-tauri/src/lottery/services/tests/: data_collection_test.rs  mod.rs
src/components/: LotteryPrediction.tsx
src/components/ui/: select.tsx
