[package]
name = "lottery-prediction"
version = "1.0.0"
description = "Comprehensive lottery prediction system with Tauri + React + Rust"
authors = ["Claude AI"]
edition = "2024"
publish = false

[lib]
name = "lottery_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = { version = "2", features = ["tracing"] }
tauri-plugin-opener = { version = "2" }
tauri-plugin-store = { version = "2" }
tauri-plugin-window-state = { version = "2" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "tls-native-tls"] }

# HTTP and Web Scraping
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli"] }
scraper = "0.20"
regex = "1.11"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
roxmltree = "0.20"

# Math and Statistics
ndarray = { version = "0.16.1", features = ["serde", "serde-1"] }
ndarray-rand = "0.15.0"
async-trait = "0.1.89"
rand = "0.8.5"
statrs = "0.17.1"
linfa = "0.7.0"
linfa-trees = "0.7.0"
linfa-clustering = "0.7.0"

# Machine Learning
linfa-linear = "0.7.0"
linfa-logistic = "0.7.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
